--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -32,6 +32,7 @@ body {
 html {
   height: 100%;
   width: 100%;
+  scroll-behavior: smooth;
 }
 
 a:active,
@@ -90,11 +91,18 @@ input:focus {
   box-shadow: 0px 4px 4px rgba(var(--font-primary-color), 0.25);
 }
 
-.navbar_wrapper {
+/* .navbar_wrapper {
   display: flex;
   margin: 0 auto;
   padding: 0.5rem 1rem;
   justify-content: space-between;
+  align-items: center;
+} */
+
+.navbar_wrapper {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  padding: 0.5rem 1rem;
   align-items: center;
 }
 
@@ -120,6 +128,13 @@ input:focus {
   }
 }
 
+@media screen and (min-width: 860px) {
+  .navbar_wrapper {
+    grid-template-columns: auto 1fr auto;
+    margin: 0 auto;
+  }
+}
+
 @media screen and (min-width: 1280px) {
   .navbar_wrapper {
     padding: 0.5rem 0;
@@ -127,6 +142,11 @@ input:focus {
 
   .nav_brand {
     font-size: 1.75rem;
+  }
+
+  .nav_brand > img {
+    width: 58px;
+    height: 58px;
   }
 }
 
@@ -146,6 +166,7 @@ input:focus {
 
 .hamburger_icon {
   display: inline-flex;
+  justify-self: end;
 }
 
 .hamburger_icon button,
@@ -179,6 +200,7 @@ input:focus {
   flex-direction: column;
   position: fixed;
   height: 100%;
+  width: 100%;
   max-width: 320px;
   background-color: black;
   top: 0;
@@ -229,6 +251,7 @@ input:focus {
 .search_input {
   padding-left: 2.75rem;
   font-size: 1.2rem;
+  width: 290px;
 }
 
 .search_svg {
@@ -283,6 +306,7 @@ input:focus {
   .navbar_search {
     display: block;
     position: relative;
+    justify-self: center;
   }
 
   .search_icon {
@@ -319,7 +343,6 @@ input:focus {
 }
 
 @media screen and (min-width: 900px) {
-  
 }
 
 /* Hero Landing */
@@ -339,6 +362,7 @@ input:focus {
   top: 0;
   left: 0;
   width: 100%;
+  height: auto;
   z-index: -1;
 }
 
@@ -469,30 +493,34 @@ input:focus {
 
 .heading_title {
   font-family: var(--font-heading);
-  font-size: 1rem;
+  font-size: 1.75rem;
   width: 100%;
   margin: 0.725rem auto;
-  margin-top: 1.5rem;
+  padding: 4rem 1.5rem 2rem 1.5rem;
   text-align: center;
   color: rgb(var(--font-primary-color));
 }
 
-@media screen and (min-width: 425px) {
-  .heading_title {
-    font-size: 1.3rem;
-  }
+.favorite {
+  padding-top: 4.5rem !important;
+  padding-bottom: 1rem !important;
 }
 
 @media screen and (min-width: 630px) {
   .heading_title {
-    font-size: 1.5rem;
-    margin-bottom: 1.25rem;
+    font-size: 2rem;
+  }
+}
+
+@media screen and (min-width: 860px) {
+  .favorite {
+    padding-top: 6.5rem !important;
   }
 }
 
 @media screen and (min-width: 1000px) {
   .heading_title {
-    font-size: 2rem;
+    font-size: 2.5rem;
   }
 }
 
@@ -502,13 +530,13 @@ input:focus {
   align-items: start;
   margin: 0 auto;
   margin-bottom: 3rem;
+  column-gap: 2rem;
   row-gap: 2rem;
+  padding: 0 1.5rem;
 }
 
 .item_restaurant {
-  /* max-width: 410px; */
   max-height: 585px;
-  padding: 0 1rem;
   margin: 0 auto;
 }
 
@@ -524,7 +552,7 @@ input:focus {
   position: absolute;
   top: 12px;
   left: 12px;
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 500;
   background-color: var(--titan-white-color);
   color: var(--indigo-color);
@@ -562,7 +590,7 @@ input:focus {
 }
 
 .content h2 a {
-  font-size: 1.75rem;
+  font-size: 1.5rem;
   line-height: 2.2rem;
   color: rgb(var(--font-primary-color));
   padding: 0.7rem 0;
@@ -575,7 +603,7 @@ input:focus {
 
 .content p {
   text-overflow: ellipsis;
-  font-size: 1.2rem;
+  font-size: 1rem;
   display: -webkit-box;
   -webkit-line-clamp: 5;
   -webkit-box-orient: vertical;
@@ -610,6 +638,254 @@ input:focus {
     max-width: 1280px;
     grid-template-columns: 1fr 1fr 1fr;
   }
+
+  .content h2 a {
+    font-size: 1.75rem;
+  }
+
+  .content p {
+    font-size: 1.15rem;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .list_items {
+    padding: 0;
+  }
+}
+
+/* Detail */
+
+.detail_container {
+  position: relative;
+  display: block;
+  padding: 1.5rem;
+  padding-top: 4rem;
+  margin: 0 auto;
+}
+
+.detail_header {
+  padding: 0.7rem 0;
+}
+
+.detail_header h1 {
+  font-size: 1.5rem;
+  line-height: 2.2rem;
+  color: rgb(var(--font-primary-color));
+  padding: 0.7rem 0;
+}
+
+.detail_sub_header {
+  display: inline-flex;
+  align-items: center;
+  gap: 0.5rem;
+  margin-right: 1rem;
+  margin-bottom: 0.5rem;
+}
+
+.detail_content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.detail_content_picture {
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+}
+
+.detail_content_picture img {
+  width: 100%;
+  height: auto;
+  border-radius: 0.75rem;
+}
+
+.detail_content_info {
+  background-color: white;
+  border-radius: 0.75rem;
+  padding: 0 1rem;
+  box-shadow: 0px 0px 6px rgba(var(--font-primary-color), 0.3);
+}
+
+.detail_content_info h2 {
+  font-size: 1.25rem;
+  line-height: 2.2rem;
+  padding: 0.25rem 0;
+  color: rgb(var(--font-primary-color));
+}
+
+.detail_content_info_item {
+  margin: 0.75rem auto;
+  color: rgb(var(--font-primary-color));
+  font-size: 1rem;
+}
+
+.detail_content_info_item .item_value {
+  display: flex;
+  justify-content: space-between;
+}
+
+.detail_content_info_menu {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+}
+
+.detail_content_info_menu span {
+  font-size: 0.85rem;
+  border: 1px solid rgb(var(--primary-color));
+  border-radius: 999rem;
+  padding: 0.2rem 0.75rem;
+}
+
+.detail_reviews, 
+.detail_description {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  border-top: 1px solid rgba(var(--primary-color), 0.75);
+  color: rgb(var(--font-primary-color));
+}
+
+.detail_reviews h2, 
+.detail_description h2 {
+  margin: 0.8rem 0 0.5rem 0;
+}
+
+.detail_description p {
+  line-height: 1.75rem;
+}
+
+.customer_review {
+  margin: 1.5rem 0;
+}
+
+.customer_review_header {
+  display: flex;
+  gap: 0.75rem;
+  align-items: center;
+}
+
+.customer_review_header img {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+}
+
+.customer_review_info p {
+  font-size: 0.85rem;
+}
+
+.customer_review_body {
+  margin-top: 0.5rem;
+  padding-left: 3.5rem;
+}
+
+@media screen and (min-width: 425px) {
+  .detail_header h1 {
+    font-size: 2rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .detail_sub_header {
+    font-size: 1.25rem;
+  }
+
+  .detail_content_info {
+    padding: 0 1.25rem;
+  }
+
+  .detail_content_info_menu span {
+    font-size: 1rem;
+  }
+
+  .detail_content_info_item .item_value {
+    font-size: 1.25rem;
+  }
+}
+
+@media screen and (min-width: 860px) {
+  .detail_container {
+    padding-top: 6rem;
+  }
+
+  .customer_review_info p {
+    font-size: 0.9rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .detail_content {
+    flex-direction: row;
+    gap: 1.25rem;
+  }
+
+  .detail_content_info {
+    max-width: 360px;
+    height: auto;
+    height: fit-content;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .detail_container {
+    max-width: 1280px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .detail_content_info {
+    max-width: 420px;
+  }
+
+  .detail_content_info h2 {
+    font-size: 1.5rem;
+  }
+}
+
+/* Like */
+
+.like {
+  display: block;
+  width: 100%;
+  border-radius: 999rem;
+  padding: 0.8rem;
+  margin: 1.25rem auto;
+  font-size: 1.25rem;
+  color: white;
+  background-color: rgb(var(--primary-color));
+  border: 0;
+  cursor: pointer;
+}
+
+.liked {
+  display: block;
+  width: 100%;
+  border-radius: 999rem;
+  padding: 0.8rem;
+  margin: 1.25rem auto;
+  font-size: 1.25rem;
+  color: rgb(var(--primary-color));
+  background-color: white;
+  border: 2px solid rgb(var(--primary-color));
+  cursor: pointer;
+}
+
+.liked:hover {
+  color: white;
+  background-color: rgb(var(--primary-color));
+}
+
+.like:hover {
+  background-color: var(--yellow-color);
+}
+
+@media screen and (min-width: 768px) {
+  .like,
+  .liked {
+    font-size: 1.75rem;
+  }
 }
 
 /* Footer */
@@ -629,7 +905,8 @@ input:focus {
   gap: 0.1rem;
 }
 
-.copyright, .copyright a {
+.copyright,
+.copyright a {
   font-family: var(--font-body);
   color: var(--font-secondary-color);
   padding: 0.7rem;
@@ -666,5 +943,10 @@ input:focus {
 
   .footer_menu {
     order: 0;
+  }
+
+  .copyright,
+  .copyright a {
+    padding-left: 0;
   }
 }
