Changed lazySizes implementation: data-srcset

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Find out where the best and comfortable restaurants with beautiful and instagramable views. Get a menu of food and drinks at the right price.">
   <meta name="theme-color" content="#5A4FCF">
   <link rel="icon" href="./favicon.png">
   <link rel="apple-touch-icon" href="./icons/icon-192x192.png">
